# Hexagon

./: BestResult.txt  CMakeLists.txt  README.md  main.cpp
saves/: MySave.txt  MySave2.txt  against.txt  endgame2.txt  test.txt  xD.txt
