cmake_minimum_required(VERSION 3.24)
project(untitled)
set(CMAKE_CXX_STANDARD 23)
set(BUILD_SHARED_LIBS FALSE)
include(FetchContent)
FetchContent_Declare(SFML GIT_REPOSITORY https://github.com/SFML/SFML.git)
FetchContent_MakeAvailable(SFML)
add_executable(untitled main.cpp)
target_link_libraries(untitled PRIVATE sfml-graphics)
